# pymastery-vp

./: .gitignore  .gitmodules  AGENTS.md  Makefile  README.md  README.rst  mkdocs.yml  package-lock.json  package.json  pyproject.toml  verify-conversion.sh
.ai/: config.yaml
.ai/rulesets/: 00-terms-and-conventions.md  01-general-guidelines.md  02-grammar-and-style.md  03-documentation.md
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: work_package.md
.github/workflows/: deploy-docs.yml  test_build.yml
content/en/: conf.py  index.md
content/en/appx/: _keywords.md  assignments.md  busybox.md  busybox.txt  code_edit.md  conv_store.md  env_path.md  pg_func_ops.md  pg_local.md  postgres.md  precedence.md  printf.md  software_list.md  wtk.md
content/en/basics/: bool_logic.md  controlflow.md  decorators.md  exceptions.md  functions.md  index.md  modules.md  pep8.md  stdtypes.md  syntax.md  testing.md  variables.md
content/en/deploy/: index.md
content/en/django/: index.md
content/en/intro/: index.md  install.md  interact.md
content/en/linux/: commands.md  filesys.md  index.md  ssh.md  symlinks.md  users.md  users.txt
content/en/oop/: index.md  intro.md  solid.md
content/en/rdbms/: acid.md  datatypes.md  ddl.md  dml.md  functions.md  index.md  normalization.md  query.md  relations.md  structure.md
content/en/vcs/: basics.md  branch.md  github.md  index.md  intro.md  pullrequest.md  remotes.md  setup.md  tagging.md
content/ru/: README.md
content/uk/: .translation-status.md  index.md
docs/: ADR-0001-ai-guidelines-structure.md  ADR-001-ai-guidelines-structure.md  ADR-002-ssg-replacement.md  ADR-003-repo-file-structure.md  ADR-004-presentation-framework.md  ADR-005-ai-agent-configuration-files.md  ADR-006-ai-agent-configuration-files.md  ADR-006-presentation-content.md  CONTRIBUTING.md  HEALTH-REPORT-2026-01.md  ROLES.md
docs/mindmaps/: basics-function.mmd
docs/templates/: WP.md  _changelog.md
src/: conf.js  conf.py  refs.bib
src/linux/: commands.txt  filesys.txt  ssh.txt  symlinks.txt
src/rdbms/presentations/: normalization.html
templates/: ADR.md  _changelog.md  adr.md
