[project]
name = "pymastery-vp"
description = "Python mastery course materials"
version = "2026.01dev0"
authors = [
    { name = "Vladyslav Ponomaryov" },
    { name = "Serhii Horodilov", email = "sgorodil@gmail.com" },
]
requires-python = ">=3.9"
classifiers = [
    "Natural Language :: English",
    "Natural Language :: Ukrainian",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Documentation",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Education"
]
keywords = [
    "python",
    "training",
    "education",
    "course",
    "materials",
    "web",
    "programming",
    "development",
    "postgresql",
    "django",
    "django-rest-framework",
    "web-development",
]
readme = "README.rst"

dependencies = [
    "Sphinx>=6.1.3",
    "sphinx-intl>=2.1.0",
    "sphinx-rtd-theme>=1.2.0",
    "myst-parser>=1.0.0",
    "sphinxcontrib-bibtex>=2.5.0",
    "sphinxcontrib-mermaid>=0.8.1",
    "sphinx-copybutton>=0.5.2",
    "sphinx-reredirects>=0.1.3",
    "sphinxcontrib-svg2pdfconverter>=1.2.2",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocs-static-i18n>=1.3.0",
    "pymdown-extensions>=10.20.1",
]

[project.urls]
Repository = "https://github.com/OpenRoost/pymastery-vp.git"
